--- a/catalog.html
+++ b/catalog.html
@@ -45,7 +45,31 @@
             <a class="gs-black-link" href="#">Забыли пароль?</a>
             <a class="gs-black-link" href="#">Новая регистрация</a>
           </div>
-          <a class="gs-top-btn gs-small-cart">Пусто</a>  
+          <a class="gs-top-btn gs-small-cart-full" href="#">2 товара</a> 
+          <div class="gs-small-cart-popup">
+            <ul>
+              <li class="gs-small-cart-popup-item">
+                <a class="gs-small-cart-delete" title="Закрыть" href="#">Закрыть</a>
+                <a href="#"><img class="gs-small-cart-img" src="img/tmp/1-small.jpg" width="33" height="33" alt="Пломбир с апельсиновым джемом"></a>
+                <a class="gs-small-cart-name" href="#">Пломбир с апельсиновым джемом</a>
+                <span>1,5 кг х</span>
+                <span>200 руб.</span>
+                <span>300 руб.</span>
+              </li>
+              <li class="gs-small-cart-popup-item">
+                <a class="gs-small-cart-delete" title="Закрыть" href="#">Закрыть</a>
+                <a href="#"><img class="gs-small-cart-img" src="img/tmp/3-small.jpg" width="33" height="33" alt="Клубничный пломбир с присыпкой из белого шоколада"></a>
+                <a class="gs-small-cart-name" href="#">Клубничный пломбир с присыпкой из белого шоколада</a>
+                <span>1,5 кг х</span>
+                <span>300 руб.</span>
+                <span>450 руб.</span>
+              </li>
+            </ul>
+            <div class="gs-small-cart-sum">
+              <span class="gs-small-cart-overall">Итого: 750 руб.</span>
+              <a class="gs-btn" href="#">Оформить заказ</a>
+            </div>
+          </div>   
         </div>
         <div class="gs-header-contacts">
           <span class="gs-header-hours">С 10 до 20, ежедневно</span>
@@ -65,46 +89,60 @@
     <h1 class="gs-catalog-title">Сливочное мороженное</h1>
     <div class="gs-filter clearfix">
       <form class="gs-filter-form" action="#" method="post">
-      <!--ORDER SELECT-->
-        <div class="gs-filter-form-sort">
-          <label for="filter-sort">Сортировка:</label>
-          <select name="filter-sort" id="filter-sort">
-            <option value="popular">по популярности</option>
-            <option value="lowprice">сначала недорогие</option>
-            <option value="highprice">сначала дорогие</option>
-            <option value="fat">по жирности</option>
-          </select>
-        </div>
-        <!--PRICE SLIDER-->
-        <div class="gs-filter-form-price">
-          <label for="price-slider">Цена: 100 руб. &ndash; 500 руб.</label>
-          <input type="range" min="0" max="500" step="10" id="price-slider">  
-        </div>
-        <!--FATNESS RADIO-->
-        <div class="gs-filter-form-fatness">
-          <label for="10">Жирность:</label>
-          <input type="radio" name="fatness" id="0" value="0">
-          <label for="0">0%</label>
-          <input type="radio" name="fatness" id="10" value="10" checked>
-          <label for="10">до 10%</label>
-          <input type="radio" name="fatness" id="30" value="30">
-          <label for="30">до 30%</label>
-          <input type="radio" name="fatness" id="30-more" value="30-more">
-          <label for="30-more">выше 30%</label> 
+        <div class="gs-filter-row clearfix">
+        <!--ORDER SELECT-->
+          <div class="gs-filter-form-sort">
+            <label>Сортировка:</label>
+            <select class="gs-filter-select-sort" name="filter-sort" id="filter-sort">
+              <option value="popular">по популярности</option>
+              <option value="lowprice">сначала недорогие</option>
+              <option value="highprice">сначала дорогие</option>
+              <option value="fat">по жирности</option>
+            </select>
+          </div>
+          <!--PRICE SLIDER-->
+          <div class="gs-filter-form-price">
+            <div class="gs-price-controls">
+              <label class="gs-label-price">Цена: <input type="text" name="min-price" value="100"> руб. &ndash; <input type="text" name="max-price" value="500"> руб.</label>
+            </div>
+            <div class="gs-range-controls">
+              <div class="gs-range-scale">
+                <div class="gs-range-bar"></div>
+              </div> 
+              <div class="gs-range-toggle gs-range-toggle-min"></div>
+              <div class="gs-range-toggle gs-range-toggle-max"></div> 
+            </div> 
+          </div>
+          <!--FATNESS RADIO-->
+          <div class="gs-filter-form-fatness">
+            <label for="10">Жирность:</label>
+            <div class="gs-filter-bg">
+              <input type="radio" name="fatness" id="0" value="0">
+              <label for="0">0%</label>
+              <input type="radio" name="fatness" id="10" value="10" checked>
+              <label for="10">до 10%</label>
+              <input type="radio" name="fatness" id="30" value="30">
+              <label for="30">до 30%</label>
+              <input type="radio" name="fatness" id="30-more" value="30-more">
+              <label for="30-more">выше 30%</label>  
+            </div> 
+          </div>
         </div>
         <!--FILLER CHECKBOXES-->
         <div class="gs-filter-form-filler">
           <label>Наполнители:</label>
-          <input type="checkbox" id="choco" name="choco" checked>
-          <label for="choco">шоколадные</label>
-          <input type="checkbox" id="powder" name="powder" checked>
-          <label for="powder">сахарные присыпки</label>
-          <input type="checkbox" id="fruits" name="fruits">
-          <label for="fruits">фрукты</label>
-          <input type="checkbox" id="syrup" name="syrup">
-          <label for="syrup">сиропы</label>
-          <input type="checkbox" id="jam" name="jam">
-          <label for="jam">джемы</label>  
+          <div class="gs-filter-bg">
+            <input type="checkbox" id="choco" name="choco" checked>
+            <label for="choco">шоколадные</label>
+            <input type="checkbox" id="powder" name="powder" checked>
+            <label for="powder">сахарные присыпки</label>
+            <input type="checkbox" id="fruits" name="fruits">
+            <label for="fruits">фрукты</label>
+            <input type="checkbox" id="syrup" name="syrup">
+            <label for="syrup">сиропы</label>
+            <input type="checkbox" id="jam" name="jam">
+            <label for="jam">джемы</label> 
+          </div> 
         </div>
         <!--SUBMIT BTN-->
         <div class="gs-filter-form-btn">
@@ -260,13 +298,13 @@
     </section>
     <div class="gs-paging">
       <ul>
-        <li><a href="#">&lsaquo;</a></li>
+        <li><a class="disabled" href="#"></a></li>
         <li class="active"><a href="#">1</a></li>
         <li><a href="#">2</a></li>
         <li><a href="#">3</a></li>
         <li><a href="#">4</a></li>
         <li><a href="#">5</a></li>
-        <li><a href="#">&rsaquo;</a></li>
+        <li><a href="#"></a></li>
       </ul>
     </div>  
   </main>
@@ -291,6 +329,6 @@
         <p>Сделано в <a class="gs-white-link" href="#">HTML Academy</a> &copy; 2016</p>
       </div>
     </div>
-  </footer>
+  </footer>   
   </body>
-—</html>
+</html>
