--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
             </div>
             <div class="gs-products-item-view">
-              <a class="gs-btn" href="#">Быстрый просмотр</a>
+              <a class="gs-btn gs-btn-item-view" href="#">Быстрый просмотр</a>
             </div>
           </article>
           <article class="gs-products-item">
@@ -188,7 +188,9 @@
             <div class="gs-subscribe-content">
               <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =) </p>
               <form action="#" method="post">
+                 <div class="gs-test">
                 <input class="gs-input" type="text" name="email" id="email" placeholder="Электронная почта">
+                </div>
                 <button class="gs-btn" type="submit">Отправить</button>
               </form>  
             </div>
