--- a/index.html
+++ b/index.html
@@ -37,13 +37,15 @@
               <a class="gs-top-btn gs-search" href="#">Поиск</a>
               <div class="gs-search-form">
                 <form action="#" method="get">
-                  <input class="gs-input" type="text" name="search" id="search" placeholder="Что ищем?">  
+                  <input class="gs-input" type="text" name="search" id="search">
+                  <label class="gs-input-hint" for="search">Что ищем?</label>  
                 </form>
               </div>
               <a class="gs-top-btn gs-login" href="#">Вход</a>
               <div class="gs-login-popup">
                 <form class="gs-login-form" action="#" method="post">
-                  <input class="gs-input" type="text" name="login-email" placeholder="Электронная почта">
+                  <input class="gs-input" type="text" name="login-email" id="login-email">
+                  <label class="gs-input-hint" for="login-email">Электронная почта</label>
                   <input class="gs-input" type="text" name="login-pass" placeholder="Пароль">
                   <button class="gs-btn" type="submit">Войти</button>
                 </form>
