Пред-финальная полировка

--- a/catalog.html
+++ b/catalog.html
@@ -14,10 +14,10 @@
       </div>
       <nav class="gs-mainmenu">
         <ul>
-          <li class="gs-mainmenu-item"><a href="#">Каталог</a>
+          <li class="gs-mainmenu-item active"><a href="#">Каталог</a>
             <ul class="gs-submenu">
               <li class="gs-submenu-item"><a href="#">Новинки</a></li>
-              <li class="gs-submenu-item"><a href="#">Сливочное</a></li>
+              <li class="gs-submenu-item active"><a href="#">Сливочное</a></li>
               <li class="gs-submenu-item"><a href="#">Щербеты</a></li>
               <li class="gs-submenu-item"><a href="#">Фруктовый лед</a></li>
               <li class="gs-submenu-item"><a href="#">Мелорин</a></li>
@@ -32,7 +32,8 @@
           <a class="gs-top-btn gs-search" href="#">Поиск</a>
           <div class="gs-search-form">
             <form action="#" method="get">
-              <input class="gs-input" type="text" name="search" id="search" placeholder="Что ищем?">  
+              <input class="gs-input" type="text" name="search" id="search">
+              <label class="gs-input-hint" for="search">Что ищем?</label>  
             </form>
           </div>
           <a class="gs-top-btn gs-login" href="#">Вход</a>
@@ -160,7 +161,7 @@
           <a class="gs-products-item-title" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
         </div>
         <div class="gs-products-item-view">
-          <a class="gs-btn" href="#">Быстрый просмотр</a>
+          <a class="gs-btn gs-btn-item-view" href="#">Быстрый просмотр</a>
         </div>
       </article>
       <article class="gs-products-item">
@@ -172,7 +173,7 @@
           <a class="gs-products-item-title" href="#">Сливочно-кофейное с кусочками шоколада</a>
         </div>
         <div class="gs-products-item-view">
-          <a class="gs-btn" href="#">Быстрый просмотр</a>
+          <a class="gs-btn gs-btn-item-view" href="#">Быстрый просмотр</a>
         </div>
       </article>
       <article class="gs-products-item">
@@ -184,7 +185,7 @@
           <a class="gs-products-item-title" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
         </div>
         <div class="gs-products-item-view">
-          <a class="gs-btn" href="#">Быстрый просмотр</a>
+          <a class="gs-btn gs-btn-item-view" href="#">Быстрый просмотр</a>
         </div>
       </article>
       <article class="gs-products-item">
@@ -196,7 +197,7 @@
           <a class="gs-products-item-title" href="#">Сливочное крем-брюле с карамельной подливкой</a>
         </div>
         <div class="gs-products-item-view">
-          <a class="gs-btn" href="#">Быстрый просмотр</a>
+          <a class="gs-btn gs-btn-item-view" href="#">Быстрый просмотр</a>
         </div>
       </article>
       <article class="gs-products-item">
@@ -208,7 +209,7 @@
           <a class="gs-products-item-title" href="#">Сливочное с брусничным джемом</a>
         </div>
         <div class="gs-products-item-view">
-          <a class="gs-btn" href="#">Быстрый просмотр</a>
+          <a class="gs-btn gs-btn-item-view" href="#">Быстрый просмотр</a>
         </div>
       </article>
       <article class="gs-products-item">
@@ -220,7 +221,7 @@
           <a class="gs-products-item-title" href="#">Сливочно-черничное с цельными ягодами черники</a>
         </div>
         <div class="gs-products-item-view">
-          <a class="gs-btn" href="#">Быстрый просмотр</a>
+          <a class="gs-btn gs-btn-item-view" href="#">Быстрый просмотр</a>
         </div>
       </article>
       <article class="gs-products-item">
@@ -232,7 +233,7 @@
           <a class="gs-products-item-title" href="#">Сливочно-лимонное с карамельной присыпкой</a>
         </div>
         <div class="gs-products-item-view">
-          <a class="gs-btn" href="#">Быстрый просмотр</a>
+          <a class="gs-btn gs-btn-item-view" href="#">Быстрый просмотр</a>
         </div>
       </article>
       <article class="gs-products-item">
@@ -244,7 +245,7 @@
           <a class="gs-products-item-title" href="#">Сливочное с шоколадной стружкой</a>
         </div>
         <div class="gs-products-item-view">
-          <a class="gs-btn" href="#">Быстрый просмотр</a>
+          <a class="gs-btn gs-btn-item-view" href="#">Быстрый просмотр</a>
         </div>
       </article>
       <article class="gs-products-item">
@@ -256,7 +257,7 @@
           <a class="gs-products-item-title" href="#">Сливочно-ванильное с кусочками шоколада</a>
         </div>
         <div class="gs-products-item-view">
-          <a class="gs-btn" href="#">Быстрый просмотр</a>
+          <a class="gs-btn gs-btn-item-view" href="#">Быстрый просмотр</a>
         </div>
       </article>
       <article class="gs-products-item">
@@ -268,7 +269,7 @@
           <a class="gs-products-item-title" href="#">Сливочноe с ментоловым сиропом</a>
         </div>
         <div class="gs-products-item-view">
-          <a class="gs-btn" href="#">Быстрый просмотр</a>
+          <a class="gs-btn gs-btn-item-view" href="#">Быстрый просмотр</a>
         </div>
       </article>
       <article class="gs-products-item">
@@ -280,7 +281,7 @@
           <a class="gs-products-item-title" href="#">Сливочное с кусочками черного шоколада</a>
         </div>
         <div class="gs-products-item-view">
-          <a class="gs-btn" href="#">Быстрый просмотр</a>
+          <a class="gs-btn gs-btn-item-view" href="#">Быстрый просмотр</a>
         </div>
       </article>
       <article class="gs-products-item">
@@ -292,19 +293,19 @@
           <a class="gs-products-item-title" href="#">Сливочное с мятным сиропом</a>
         </div>
         <div class="gs-products-item-view">
-          <a class="gs-btn" href="#">Быстрый просмотр</a>
+          <a class="gs-btn gs-btn-item-view" href="#">Быстрый просмотр</a>
         </div>
       </article>
     </section>
     <div class="gs-paging">
       <ul>
-        <li><a class="disabled" href="#"></a></li>
-        <li class="active"><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">4</a></li>
-        <li><a href="#">5</a></li>
-        <li><a href="#"></a></li>
+        <li class="gs-paging-item disabled"><a></a></li>
+        <li class="gs-paging-item active"><a href="#">1</a></li>
+        <li class="gs-paging-item"><a href="#">2</a></li>
+        <li class="gs-paging-item"><a href="#">3</a></li>
+        <li class="gs-paging-item"><a href="#">4</a></li>
+        <li class="gs-paging-item"><a href="#">5</a></li>
+        <li class="gs-paging-item"><a href="#"></a></li>
       </ul>
     </div>  
   </main>
@@ -318,10 +319,10 @@
       </div>
       <div class="gs-footermenu">
         <ul>
-          <li><a class="gs-white-link" href="#">Для поставщиков</a></li>
-          <li><a class="gs-white-link" href="#">Наши документы</a></li>
-          <li><a class="gs-white-link" href="#">О производстве</a></li>
-          <li><a class="gs-white-link" href="#">Экологические стандарты</a></li>
+          <li class="gs-footermenu-item"><a class="gs-white-link" href="#">Для поставщиков</a></li>
+          <li class="gs-footermenu-item"><a class="gs-white-link" href="#">Наши документы</a></li>
+          <li class="gs-footermenu-item"><a class="gs-white-link" href="#">О производстве</a></li>
+          <li class="gs-footermenu-item"><a class="gs-white-link" href="#">Экологические стандарты</a></li>
         </ul>
       </div>
       <div class="gs-author">
@@ -329,6 +330,7 @@
         <p>Сделано в <a class="gs-white-link" href="#">HTML Academy</a> &copy; 2016</p>
       </div>
     </div>
-  </footer>     
+  </footer> 
+  <script src="js/custom.js"></script>    
   </body>
 </html>
