--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
             </div>
             <div class="gs-products-item-view">
-              <a class="gs-btn" href="#">Быстрый просмотр</a>
+              <a class="gs-btn gs-btn-item-view" href="#">Быстрый просмотр</a>
             </div>
           </article>
           <article class="gs-products-item">
@@ -143,7 +143,7 @@
               <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
             </div>
             <div class="gs-products-item-view">
-              <a class="gs-btn" href="#">Быстрый просмотр</a>
+              <a class="gs-btn gs-btn-item-view" href="#">Быстрый просмотр</a>
             </div>
           </article>
           <article class="gs-products-item">
@@ -158,7 +158,7 @@
               <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
             </div>
             <div class="gs-products-item-view">
-              <a class="gs-btn" href="#">Быстрый просмотр</a>
+              <a class="gs-btn gs-btn-item-view" href="#">Быстрый просмотр</a>
             </div> 
           </article>   
         </section>
@@ -190,9 +190,7 @@
             <div class="gs-subscribe-content">
               <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =) </p>
               <form action="#" method="post">
-                 <div class="gs-test">
                 <input class="gs-input" type="text" name="email" id="email" placeholder="Электронная почта">
-                </div>
                 <button class="gs-btn" type="submit">Отправить</button>
               </form>  
             </div>
@@ -209,33 +207,33 @@
               <p>Для заказов по телефону:</p>
               <p class="gs-contacts-phone">8 812 450-25-25</p>
               <p>(с 10 до 20 ежедневно)</p>
-              <a class="gs-btn gs-contacts-feedback" href="#">Форма обратной связи</a>
+              <a class="gs-btn gs-contacts-feedback" href="feedback.html">Форма обратной связи</a>
             </div>
           </div>
         </div>
       </section>
       <footer class="gs-mainfooter">
-        <div class="container clearfix">
-          <div class="gs-footer-socials">
-            <a class="gs-socials tw" href="#">Twitter</a>
-            <a class="gs-socials ins" href="#">Instagram</a>
-            <a class="gs-socials fb" href="#">Facebook</a>
-            <a class="gs-socials vk" href="#">Vkontakte</a>
-          </div>
-          <div class="gs-footermenu">
-            <ul>
-              <li><a class="gs-white-link" href="#">Для поставщиков</a></li>
-              <li><a class="gs-white-link" href="#">Наши документы</a></li>
-              <li><a class="gs-white-link" href="#">О производстве</a></li>
-              <li><a class="gs-white-link" href="#">Экологические стандарты</a></li>
-            </ul>
-          </div>
-          <div class="gs-author">
-            <img src="img/author.svg" width="108" height="37" alt="HTML Academy">
-            <p>Сделано в <a class="gs-white-link" href="#">HTML Academy</a> &copy; 2016</p>
-          </div>
-        </div>
-      </footer>
+    <div class="container clearfix">
+      <div class="gs-footer-socials">
+        <a class="gs-socials tw" href="#">Twitter</a>
+        <a class="gs-socials ins" href="#">Instagram</a>
+        <a class="gs-socials fb" href="#">Facebook</a>
+        <a class="gs-socials vk" href="#">Vkontakte</a>
+      </div>
+      <div class="gs-footermenu">
+        <ul>
+          <li class="gs-footermenu-item"><a class="gs-white-link" href="#">Для поставщиков</a></li>
+          <li class="gs-footermenu-item"><a class="gs-white-link" href="#">Наши документы</a></li>
+          <li class="gs-footermenu-item"><a class="gs-white-link" href="#">О производстве</a></li>
+          <li class="gs-footermenu-item"><a class="gs-white-link" href="#">Экологические стандарты</a></li>
+        </ul>
+      </div>
+      <div class="gs-author">
+        <img src="img/author.svg" width="108" height="37" alt="HTML Academy">
+        <p>Сделано в <a class="gs-white-link" href="#">HTML Academy</a> &copy; 2016</p>
+      </div>
+    </div>
+  </footer>
     </div>
     <div class="gs-feedback-popup">
       <h4>Мы обязательно вам ответим!</h4>
