--- a/catalog.html
+++ b/catalog.html
@@ -33,14 +33,16 @@
           <div class="gs-search-form">
             <form action="#" method="get">
               <input class="gs-input" type="text" name="search" id="search">
-              <label class="gs-input-hint" for="search">Что ищем?</label>  
+              <label for="search">Что ищем?</label>  
             </form>
           </div>
           <a class="gs-top-btn gs-login" href="#">Вход</a>
           <div class="gs-login-popup">
             <form class="gs-login-form" action="#" method="post">
-              <input class="gs-input" type="text" name="login-email" placeholder="Электронная почта">
-              <input class="gs-input" type="text" name="login-pass" placeholder="Пароль">
+              <input class="gs-input gs-login-email" type="text" name="login-email" id="login-email">
+              <label for="login-email">Электронная почта</label>
+              <input class="gs-input gs-login-pass" type="text" name="login-pass" id="login-pass">
+              <label for="login-pass">Пароль</label>
               <button class="gs-btn" type="submit">Войти</button>
             </form>
             <a class="gs-black-link" href="#">Забыли пароль?</a>
@@ -331,6 +333,6 @@
       </div>
     </div>
   </footer> 
-  <script src="js/custom.js"></script>    
+  <script src="js/custom.js"></script>   
   </body>
 </html>
