--- a/index.html
+++ b/index.html
@@ -38,15 +38,16 @@
               <div class="gs-search-form">
                 <form action="#" method="get">
                   <input class="gs-input" type="text" name="search" id="search">
-                  <label class="gs-input-hint" for="search">Что ищем?</label>  
+                  <label for="search">Что ищем?</label>  
                 </form>
               </div>
               <a class="gs-top-btn gs-login" href="#">Вход</a>
               <div class="gs-login-popup">
                 <form class="gs-login-form" action="#" method="post">
-                  <input class="gs-input" type="text" name="login-email" id="login-email">
-                  <label class="gs-input-hint" for="login-email">Электронная почта</label>
-                  <input class="gs-input" type="text" name="login-pass" placeholder="Пароль">
+                  <input class="gs-input gs-login-email" type="text" name="login-email" id="login-email">
+                  <label for="login-email">Электронная почта</label>
+                  <input class="gs-input gs-login-pass" type="text" name="login-pass" id="login-pass">
+                  <label for="login-pass">Пароль</label>
                   <button class="gs-btn" type="submit">Войти</button>
                 </form>
                 <a class="gs-black-link" href="#">Забыли пароль?</a>
@@ -184,7 +185,7 @@
         <section class="gs-marketing clearfix">
           <div class="gs-blog-lastitem">
             <span>Новое в нашем блоге</span>
-            <a href="#">10 способов сервировки фруктовых щербетов к столу</a>
+            <a href="#"><span>10 способов сервировки фруктовых щербетов к столу</span></a>
           </div>
           <div class="gs-subscribe">
             <div class="gs-subscribe-content">
@@ -239,9 +240,12 @@
       <h4>Мы обязательно вам ответим!</h4>
       <button class="gs-feedback-close" type="button" title="Закрыть">Закрыть</button>
       <form class="gs-feedback-form" action="#" method="post">
-        <input class="gs-input" type="text" name="feedback-name" id="feedback-name" placeholder="Как вас зовут?">
-        <input class="gs-input" type="text" name="feedback-email" id="feedback-email" placeholder="Ваша почта для ответа?">
-        <textarea class="gs-textarea" name="feedback-text" id="feedback-text" cols="53" rows="7" placeholder="Напишите что-нибудь..."></textarea>
+        <input class="gs-input" type="text" name="feedback-name" id="feedback-name">
+        <label for="feedback-name">Как вас зовут?</label>
+        <input class="gs-input" type="text" name="feedback-email" id="feedback-email">
+        <label for="feedback-email">Ваша почта для ответа?</label>
+        <textarea class="gs-textarea" name="feedback-text" id="feedback-text" cols="53" rows="7"></textarea>
+        <label for="feedback-text">Напишите что-нибудь...</label>
         <button class="gs-btn" type="submit">Отправить</button>
       </form>
     </div>
