--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Глейси</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,900,500&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
     <input type="radio" id="btn1" name="toggle" checked>
@@ -250,6 +250,6 @@
       </form>
     </div>
     <div class="gs-modal-overlay"></div>
-  <script src="js/custom.js"></script>
+  <script src="js/custom.min.js"></script>
   </body>
 </html>
