--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Глейси - Каталог</title>
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
   <header class="gs-mainheader">
@@ -333,6 +333,6 @@
       </div>
     </div>
   </footer> 
-  <script src="js/custom.js"></script>   
+  <script src="js/custom.min.js"></script>   
   </body>
 </html>
