--- a/catalog.html
+++ b/catalog.html
@@ -89,7 +89,7 @@
         <li class="gs-breadcrumbs-item"><a class="gs-white-link">Сливочное</a></li>
       </ul>
     </div>
-    <h1 class="gs-catalog-title">Сливочное мороженное</h1>
+    <h1 class="gs-catalog-title">Сливочное мороженое</h1>
     <div class="gs-filter clearfix">
       <form class="gs-filter-form" action="#" method="post">
         <div class="gs-filter-row clearfix">
@@ -106,7 +106,13 @@
           <!--PRICE SLIDER-->
           <div class="gs-filter-form-price">
             <div class="gs-price-controls">
-              <label class="gs-label-price">Цена: <input type="text" name="min-price" value="100"> руб. &ndash; <input type="text" name="max-price" value="500"> руб.</label>
+              <span>Цена:</span> 
+              <label class="gs-label-price" for="min-price">
+                <input type="text" name="min-price" value="100" id="min-price"> руб. &ndash;
+              </label> 
+              <label class="gs-label-price" for="max-price">
+                <input type="text" name="max-price" value="500" id="max-price"> руб.
+              </label>
             </div>
             <div class="gs-range-controls">
               <div class="gs-range-scale">
