--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
-    <input type="radio" id="btn1" name="toggle" checked>
-    <input type="radio" id="btn2" name="toggle">
-    <input type="radio" id="btn3" name="toggle">
+    <input class="gs-slider-btn1" type="radio" id="btn1" name="toggle" checked>
+    <input class="gs-slider-btn2" type="radio" id="btn2" name="toggle">
+    <input class="gs-slider-btn3" type="radio" id="btn3" name="toggle">
     <div class="gs-bgbody">
       <header class="gs-mainheader">
         <div class="container clearfix">
@@ -64,25 +64,25 @@
       </header>
       <main class="container">
         <section class="gs-slider">
-          <article class="gs-slider-item" id="slide1">
+          <article class="gs-slider-item gs-slide1" id="slide1">
             <img src="img/tmp/slide1.png" width="647" height="582" alt="Крем-брюле и пломбир с малиновым джемом">
             <h2>Крем-брюле и пломбир с малиновым джемом</h2>
             <a class="gs-btn gs-slider-cta" href="#">Давайте оба!</a>
           </article>
-          <article class="gs-slider-item" id="slide2">
+          <article class="gs-slider-item gs-slide2" id="slide2">
             <img src="img/tmp/slide2.png" width="644" height="582" alt="Шоколадный пломбир и лимонный сорбет">
             <h2>Шоколадный пломбир и лимонный сорбет</h2>
             <a class="gs-btn gs-slider-cta" href="#">Давайте оба!</a>
           </article>
-          <article class="gs-slider-item" id="slide3">
+          <article class="gs-slider-item gs-slide3" id="slide3">
             <img src="img/tmp/slide3.png" width="639" height="582" alt="Пломбир с помадкой и клубничный щербет">
             <h2>Пломбир с помадкой и клубничный щербет</h2>
             <a class="gs-btn gs-slider-cta" href="#">Давайте оба!</a>
           </article>
           <div class="gs-slider-buttons">  
-            <label for="btn1"></label>
-            <label for="btn2"></label>  
-            <label for="btn3"></label>
+            <label class="gs-slider-btn1" for="btn1"></label>
+            <label class="gs-slider-btn2" for="btn2"></label>  
+            <label class="gs-slider-btn3" for="btn3"></label>
           </div>
         </section>
         <section class="gs-banner clearfix">
@@ -101,7 +101,7 @@
             </div>
           </article>
         </section>
-        <section class="gs-products">
+        <section class="gs-products-main">
           <article class="gs-products-item">
             <figure>
               <a href="#"><img src="img/tmp/1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"></a>
@@ -185,7 +185,7 @@
         <section class="gs-marketing clearfix">
           <div class="gs-blog-lastitem">
             <span>Новое в нашем блоге</span>
-            <a href="#"><span>10 способов сервировки фруктовых щербетов к столу</span></a>
+            <a class="gs-blog-lastitem-name" href="#"><span>10 способов сервировки фруктовых щербетов к столу</span></a>
           </div>
           <div class="gs-subscribe">
             <div class="gs-subscribe-content">
@@ -199,7 +199,7 @@
         </section>
       </main>
       <section class="gs-contacts">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.59910436516!2d30.32089461606286!3d59.93879418187623!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0YHQuNGPLCAxOTExODY!5e0!3m2!1sru!2sua!4v1462479381211" width="100%" height="430" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.59910436516!2d30.32089461606286!3d59.93879418187623!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0YHQuNGPLCAxOTExODY!5e0!3m2!1sru!2sua!4v1462479381211" allowfullscreen></iframe>
         <div class="container">
           <div class="gs-contacts-content">
             <div class="gs-contacts-info">
