Подправил по ПП

--- a/catalog.html
+++ b/catalog.html
@@ -163,7 +163,10 @@
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="img/tmp/1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"></a>
-          <span>310 руб/кг</span>
+          <div class="gs-products-item-price">
+            <span>310</span>
+            <span>/кг</span>
+          </div>
         </figure>
         <div class="gs-products-item-title">
           <a class="gs-products-item-title" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
@@ -175,7 +178,10 @@
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="img/tmp/2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада"></a>
-          <span>380 руб/кг</span>
+          <div class="gs-products-item-price">
+            <span>380</span>
+            <span>/кг</span>
+          </div>
         </figure>
         <div class="gs-products-item-title">
           <a class="gs-products-item-title" href="#">Сливочно-кофейное с кусочками шоколада</a>
@@ -187,7 +193,10 @@
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="img/tmp/3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада"></a>
-          <span>355 руб/кг</span>
+          <div class="gs-products-item-price">
+            <span>355</span>
+            <span>/кг</span>
+          </div>
         </figure>
         <div class="gs-products-item-title">
           <a class="gs-products-item-title" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
@@ -199,7 +208,10 @@
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="img/tmp/4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой"></a>
-          <span>415 руб/кг</span>
+          <div class="gs-products-item-price">
+            <span>415</span>
+            <span>/кг</span>
+          </div>
         </figure>
         <div class="gs-products-item-title">
           <a class="gs-products-item-title" href="#">Сливочное крем-брюле с карамельной подливкой</a>
@@ -211,7 +223,10 @@
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="img/tmp/1-1.jpg" width="267" height="267" alt="Сливочное с брусничным джемом"></a>
-          <span>325 руб/кг</span>
+          <div class="gs-products-item-price">
+            <span>325</span>
+            <span>/кг</span>
+          </div>
         </figure>
         <div class="gs-products-item-title">
           <a class="gs-products-item-title" href="#">Сливочное с брусничным джемом</a>
@@ -223,7 +238,10 @@
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="img/tmp/2-1.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники"></a>
-          <span>410 руб/кг</span>
+          <div class="gs-products-item-price">
+            <span>410</span>
+            <span>/кг</span>
+          </div>
         </figure>
         <div class="gs-products-item-title">
           <a class="gs-products-item-title" href="#">Сливочно-черничное с цельными ягодами черники</a>
@@ -235,7 +253,10 @@
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="img/tmp/3-1.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой"></a>
-          <span>375 руб/кг</span>
+          <div class="gs-products-item-price">
+            <span>375</span>
+            <span>/кг</span>
+          </div>
         </figure>
         <div class="gs-products-item-title">
           <a class="gs-products-item-title" href="#">Сливочно-лимонное с карамельной присыпкой</a>
@@ -247,7 +268,10 @@
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="img/tmp/4-1.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой"></a>
-          <span>320 руб/кг</span>
+          <div class="gs-products-item-price">
+            <span>320</span>
+            <span>/кг</span>
+          </div>
         </figure>
         <div class="gs-products-item-title">
           <a class="gs-products-item-title" href="#">Сливочное с шоколадной стружкой</a>
@@ -259,7 +283,10 @@
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="img/tmp/1-2.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада"></a>
-          <span>440 руб/кг</span>
+          <div class="gs-products-item-price">
+            <span>440</span>
+            <span>/кг</span>
+          </div>
         </figure>
         <div class="gs-products-item-title">
           <a class="gs-products-item-title" href="#">Сливочно-ванильное с кусочками шоколада</a>
@@ -271,7 +298,10 @@
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="img/tmp/2-2.jpg" width="267" height="267" alt="Сливочноe с ментоловым сиропом"></a>
-          <span>435 руб/кг</span>
+          <div class="gs-products-item-price">
+            <span>435</span>
+            <span>/кг</span>
+          </div>
         </figure>
         <div class="gs-products-item-title">
           <a class="gs-products-item-title" href="#">Сливочноe с ментоловым сиропом</a>
@@ -283,7 +313,10 @@
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="img/tmp/3-2.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада"></a>
-          <span>355 руб/кг</span>
+          <div class="gs-products-item-price">
+            <span>355</span>
+            <span>/кг</span>
+          </div>
         </figure>
         <div class="gs-products-item-title">
           <a class="gs-products-item-title" href="#">Сливочное с кусочками черного шоколада</a>
@@ -295,7 +328,10 @@
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="img/tmp/4-2.jpg" width="267" height="267" alt="Сливочное с мятным сиропом"></a>
-          <span>420 руб/кг</span>
+          <div class="gs-products-item-price">
+            <span>420</span>
+            <span>/кг</span>
+          </div>
         </figure>
         <div class="gs-products-item-title">
           <a class="gs-products-item-title" href="#">Сливочное с мятным сиропом</a>
